[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accuscanner"
version = "0.1.0"
description = "AccuScanner defensive vulnerability assessment tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "paramiko>=3.5.0",
  "PyYAML>=6.0.2",
  "boto3>=1.34.0",
  "colorama>=0.4.6",
  "Jinja2>=3.1.4",
  "pywinrm>=0.4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
azure = [
  "azure-identity>=1.17.1",
  "azure-mgmt-authorization>=4.0.0",
  "azure-mgmt-compute>=33.0.0",
  "azure-mgmt-network>=28.0.0",
  "azure-mgmt-resource>=23.1.1",
  "azure-mgmt-storage>=21.2.1",
]
gcp = [
  "google-cloud-compute>=1.19.2",
  "google-cloud-iam>=2.18.3",
  "google-cloud-storage>=2.18.2",
]

[project.scripts]
accuscanner = "mininessus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
